--- a/src/templates/accounts/registration/password_reset_form.html
+++ b/src/templates/accounts/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block content %}
 
     
@@ -9,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact__form__title">
-                        <h2>Change Password</h2>
+                        <h2>{% trans 'Change Password' %}</h2>
                     </div>
                 </div>
             </div>
@@ -37,14 +38,14 @@
                
 				 <div class="row d-flex justify-content-center align-items-center  ">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                        <input type="email" placeholder="Usrname or Email" name="email">
+                        <input type="email" placeholder="{% trans 'Usrname or Email' %}" name="email">
                     </div>
                     
                     
                 </div>
 				<div class="row d-flex justify-content-center align-items-center  ">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                        <input type="password" placeholder=" New Password" name="new_password">
+                        <input type="password" placeholder="{% trans ' New Password' %}" name="new_password">
 						
                     </div>
                    
@@ -52,10 +53,10 @@
                 </div>
 				<div class="row d-flex justify-content-center align-items-center  ">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                        <input type="password" placeholder="Confirm New Password" name="confirm_new_password">
+                        <input type="password" placeholder="{% trans 'Confirm New Password' %}" name="confirm_new_password">
 						
                     </div>
-                    <button type="submit" class="site-btn" name="btn_done">DONE</button>
+                    <button type="submit" class="site-btn" name="btn_done">{% trans 'DONE' %}</button>
                     
                 </div>
 				
