--- a/src/templates/blog/categories.html
+++ b/src/templates/blog/categories.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -9,10 +10,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Blog</h2>
+                        <h2>{% trans 'Blog' %}</h2>
                         <div class="breadcrumb__option">
-                            <a href="{% url 'products:home'%}">Home</a>
-                            <span>Blog</span>
+                            <a href="{% url 'products:home'%}">{% trans 'Home' %}</a>
+                            <span>{% trans 'Blog' %}</span>
                         </div>
                     </div>
                 </div>
@@ -29,18 +30,18 @@
                     <div class="blog__sidebar">
                         <div class="blog__sidebar__search">
                             <form method='GET'action="{% url 'blog:search_blog' %}">
-                                <input type="text" placeholder="Search..." name="q">
+                                <input type="text" placeholder="{% trans 'Search...' %}" name="q">
                                 <button type="submit"><span class="icon_search"></span></button>
                             </form>
                         </div>
                         <div class="blog__sidebar__item">
-                            <h4>Categories</h4>
+                            <h4>{% trans 'Categories' %}</h4>
                             <ul>
-                                <li><a href="{% url 'blog:blog' %}">All</a></li>
-                                <li><a href="{% url 'blog:categories' 'Beauty' %}">Beauty ({{beauty_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Food' %}">Food ({{food_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Life Style' %}">Life Style ({{lifestyle_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Travel' %}">Travel ({{travel_length}})</a></li>
+                                <li><a href="{% url 'blog:blog' %}">{% trans 'All' %}</a></li>
+                                <li><a href="{% url 'blog:categories' 'Beauty' %}">{% trans 'Beauty' %} ({{beauty_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Food' %}">{% trans 'Food' %} ({{food_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Life Style' %}">{% trans 'Life Style ' %}({{lifestyle_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Travel' %}">{% trans 'Travel' %} ({{travel_length}})</a></li>
                             </ul>
                         </div>
                 
@@ -62,7 +63,7 @@
                                     </ul>
                                     <h5><a href="{% url 'blog:blog_details' post.slug %}">{{ post.title }}</a></h5>
                                     <p>{{ post.description|slice:'0:50' }}</p>
-                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">{% trans 'READ MORE ' %}<span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
