--- a/src/templates/accounts/registration/password_reset_sent.html
+++ b/src/templates/accounts/registration/password_reset_sent.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block content %}
 
     
@@ -9,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact__form__title">
-                        <h2>check to your email</h2>
+                        <h2>{% trans 'check to your email' %}</h2>
                     </div>
                 </div>
             </div>
@@ -21,8 +22,8 @@
 				 <div class="row d-flex justify-content-center align-items-center  ">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                         
-						<p class=' text-center '>If you don’t receive an email,
-						please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+						<p class=' text-center '>{% trans 'If you don’t receive an email,
+						please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
                     </div>
                     
                     
