--- a/src/templates/accounts/registration/reset_password.html
+++ b/src/templates/accounts/registration/reset_password.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block content %}
 
     
@@ -9,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact__form__title">
-                        <h2>Reset Password</h2>
+                        <h2>{% trans 'Reset Password' %}</h2>
                     </div>
                 </div>
             </div>
@@ -37,9 +38,9 @@
 				 
 				<div class="row d-flex justify-content-center align-items-center  ">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                        <input type="email" placeholder="Your Email" name= "email">
+                        <input type="email" placeholder="{% trans 'Your Email' %}" name= "email">
 					</div>
-                    <button type="submit" class="site-btn" name= "btn_reset">RESET</button>
+                    <button type="submit" class="site-btn" name= "btn_reset">{% trans 'RESET' %}</button>
                     
                 </div>
 				
