--- a/src/templates/blog/blog.html
+++ b/src/templates/blog/blog.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 {% block content %}
 
 
@@ -9,10 +10,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Blog</h2>
+                        <h2>{% trans 'Blog' %}</h2>
                         <div class="breadcrumb__option">
-                            <a href="{% url 'products:home'%}">Home</a>
-                            <span>Blog</span>
+                            <a href="{% url 'products:home'%}">{% trans 'Home' %}</a>
+                            <span>{% trans 'Blog' %}</span>
                         </div>
                     </div>
                 </div>
@@ -34,13 +35,13 @@
                             </form>
                        </div>
                         <div class="blog__sidebar__item">
-                            <h4>Categories</h4>
+                            <h4>{% trans 'Categories' %}</h4>
                             <ul>
-                                <li><a href="{% url 'blog:blog' %}">All</a></li>
-                                <li><a href="{% url 'blog:categories' 'Beauty' %}">Beauty ({{beauty_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Food' %}">Food ({{food_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Life Style' %}">Life Style ({{lifestyle_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Travel' %}">Travel ({{travel_length}})</a></li>
+                                <li><a href="{% url 'blog:blog' %}">{% trans 'All' %}</a></li>
+                                <li><a href="{% url 'blog:categories' 'Beauty' %}">{% trans 'Beauty' %} ({{beauty_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Food' %}">{% trans 'Food ' %}({{food_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Life Style' %}">{% trans 'Life Style ' %}({{lifestyle_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Travel' %}">{% trans 'Travel ' %}({{travel_length}})</a></li>
                             </ul>
                         </div>
                 
@@ -49,7 +50,7 @@
                 </div>
                 <div class="col-lg-8 col-md-7">
                     <div class="row">
-					{% for post in post %}
+					{% for post in posts %}
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="blog__item">
                                 <div class="blog__item__pic">
@@ -58,26 +59,26 @@
                                 <div class="blog__item__text">
                                     <ul>
                                         <li><i class="fa fa-calendar-o"></i> {{ post.created_at }}</li>
-                                        <li><i class="fa fa-comment-o"></i> 5</li>
+                                        <li><i class="fa fa-comment-o"></i> {{post.comment_count}}</li>
                                     </ul>
                                     <h5><a href="{% url 'blog:blog_details' post.slug %}">{{ post.title }}</a></h5>
                                     <p>{{ post.description|slice:'0:50' }}</p>
-                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">{% trans 'READ MORE ' %}<span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
                          {% endfor %}
 						<div class="col-lg-12">
-						{% if post.has_other_pages %}
+						{% if posts.has_other_pages %}
                             <div class="product__pagination blog__pagination">
-								{% if post.has_previous %}
-								<a href=" ?page={{post.previous_page_number}}"><i class="fa fa-long-arrow-left"></i></a>
+								{% if posts.has_previous %}
+								<a href=" ?page={{posts.previous_page_number}}"><i class="fa fa-long-arrow-left"></i></a>
 								{% endif %}
-								{% for page in post.paginator.page_range %}
+								{% for page in posts.paginator.page_range %}
                                 <a href="?page={{page}}">{{page}}</a>
 								{% endfor  %}
-                                {% if post.has_next %}
-                                <a href="?page={{post.next_page_number}}"><i class="fa fa-long-arrow-right"></i></a>
+                                {% if posts.has_next %}
+                                <a href="?page={{posts.next_page_number}}"><i class="fa fa-long-arrow-right"></i></a>
 								{% endif %}
                             </div>
 							{% endif%}
