--- a/src/templates/blog/blog_detail.html
+++ b/src/templates/blog/blog_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -12,7 +13,7 @@
                         <ul>
                             <li>{{ post_details.category }}</li>
                             <li>{{ post_details.created_at }}</li>
-                            <li>{{post_comments|length}} Comments</li>
+                            <li>{{post_comments|length}} {% trans 'Comments' %}</li>
                         </ul>
                     </div>
                 </div>
@@ -29,29 +30,43 @@
                     <div class="blog__sidebar">
                         <div class="blog__sidebar__search">
                             <form method='GET'action="{% url 'blog:search_blog' %}">
-                                <input type="text" placeholder="Search..." name="q">
+                                <input type="text" placeholder="{% trans 'Search...' %}" name="q">
                                 <button type="submit"><span class="icon_search"></span></button>
                             </form>
                         </div>
                         <div class="blog__sidebar__item">
-                            <h4>Categories</h4>
+                            <h4>{% trans 'Categories' %}</h4>
                             <ul>
-                                <li><a href="{% url 'blog:blog' %}">All</a></li>
-                                <li><a href="{% url 'blog:categories' 'Beauty' %}">Beauty ({{beauty_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Food' %}">Food ({{food_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Life Style' %}">Life Style ({{lifestyle_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Travel' %}">Travel ({{travel_length}})</a></li>
+                                <li><a href="{% url 'blog:blog' %}">{% trans 'All' %}</a></li>
+                                <li><a href="{% url 'blog:categories' 'Beauty' %}">{% trans 'Beauty' %} ({{beauty_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Food' %}">{% trans 'Food ' %}({{food_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Life Style' %}">{% trans 'Life Style ' %}({{lifestyle_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Travel' %}">{% trans 'Travel' %} ({{travel_length}})</a></li>
                             </ul>
                         </div>
               	       <div class="blog__sidebar__item py-0 contact-form spad">
                            
           
-                        <h4>Comments</h4>
-						
+                        <h4>{% trans 'Comments' %}</h4>
+						{% if messages %}
+				{% for msg in messages %}
+				<div {% if msg.tags %}
+					 class= " text-center {{msg.tags}} alert alert-danger" role="alert"
+				     {% endif %}
+				>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+				<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+				</svg>
+				
+				{{msg}}
+				</div>
+				{% endfor %}
+				{% endif %}
+
 						<form method= 'POST' action="{% url 'blog:post_comment' post_details.slug %}">
 							{% csrf_token %}
-                        <textarea placeholder="Your message" name="user_comment"></textarea>
-                        <button type="submit" class="site-btn">Add</button>
+                        <textarea placeholder="{% trans 'Your message' %}" name="user_comment"></textarea>
+                        <button type="submit" class="site-btn">{% trans 'Add' %}</button>
                   
 						</form>
 						</div>  
@@ -90,8 +105,8 @@
                             <div class="col-lg-6">
                                 <div class="blog__details__widget">
                                     <ul>
-                                        <li><span>Categories:</span> {{ post_details.category }}</li>
-                                        <li><span>Tags:</span> All, Trending, Cooking, Healthy Food, Life Style</li>
+                                        <li><span>{% trans 'Categories:' %}</span> {{ post_details.category }}</li>
+                                        <li><span>{% trans 'Tags:' %}</span> All, Trending, Cooking, Healthy Food, Life Style</li>
                                     </ul>
                                     <div class="blog__details__social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -116,7 +131,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title related-blog-title">
-                        <h2>Post You May Like</h2>
+                        <h2>{% trans 'Post You May Like' %}</h2>
                     </div>
                 </div>
             </div>
