--- a/src/templates/blog/search_blog.html
+++ b/src/templates/blog/search_blog.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -9,10 +10,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Blog</h2>
+                        <h2>{% trans 'Blog' %}</h2>
                         <div class="breadcrumb__option">
-                            <a href="{% url 'products:home'%}">Home</a>
-                            <span>Blog</span>
+                            <a href="{% url 'products:home'%}">{% trans 'Home' %}</a>
+                            <span>{% trans 'Blog' %}</span>
                         </div>
                     </div>
                 </div>
@@ -29,30 +30,30 @@
                     <div class="blog__sidebar">
                         <div class="blog__sidebar__search">
                             <form method='GET' action="{% url 'blog:search_blog' %}">
-                                <input type="text" placeholder="Search..." name="q">
+                                <input type="text" placeholder="{% trans 'Search...' %}" name="q">
                                 <button type="submit"><span class="icon_search"></span></button>
                             </form>
                        </div>
                         <div class="blog__sidebar__item">
-                            <h4>Categories</h4>
+                            <h4>{% trans 'Categories' %}</h4>
                             <ul>
-                                <li><a href="{% url 'blog:blog' %}">All</a></li>
-                                <li><a href="{% url 'blog:categories' 'Beauty' %}">Beauty ({{beauty_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Food' %}">Food ({{food_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Life Style' %}">Life Style ({{lifestyle_length}})</a></li>
-                                <li><a href="{% url 'blog:categories' 'Travel' %}">Travel ({{travel_length}})</a></li>
+                                <li><a href="{% url 'blog:blog' %}">{% trans 'All' %}</a></li>
+                                <li><a href="{% url 'blog:categories' 'Beauty' %}">{% trans 'Beauty ' %}({{beauty_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Food' %}">{% trans 'Food' %} ({{food_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Life Style' %}">{% trans 'Life Style' %} ({{lifestyle_length}})</a></li>
+                                <li><a href="{% url 'blog:categories' 'Travel' %}">{% trans 'Travel' %} ({{travel_length}})</a></li>
                             </ul>
                         </div>
                         <div class="blog__sidebar__item">
-                            <h4>Recent News</h4>
+                            <h4>{% trans 'Recent News' %}</h4>
                             <div class="blog__sidebar__recent">
                                 <a href="#" class="blog__sidebar__recent__item">
                                     <div class="blog__sidebar__recent__item__pic">
                                         <img src="img/blog/sidebar/sr-1.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>09 Kinds Of Vegetables<br /> Protect The Liver</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>{% trans '09 Kinds Of Vegetables' %}<br /> {% trans 'Protect The Liver' %}</h6>
+                                        <span>{% trans 'MAR 05, 2019' %}</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -60,8 +61,8 @@
                                         <img src="img/blog/sidebar/sr-2.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>Tips You To Balance<br /> Nutrition Meal Day</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>{% trans 'Tips You To Balance' %}<br /> {% trans 'Nutrition Meal Day' %}</h6>
+                                        <span>{% trans 'MAR 05, 2019' %}</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -69,8 +70,8 @@
                                         <img src="img/blog/sidebar/sr-3.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>4 Principles Help You Lose <br />Weight With Vegetables</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>{% trans '4 Principles Help You Lose ' %}<br />{% trans 'Weight With Vegetables' %}</h6>
+                                        <span>{% trans 'MAR 05, 2019' %}</span>
                                     </div>
                                 </a>
                             </div>
@@ -93,7 +94,7 @@
                                     </ul>
                                     <h5><a href="{% url 'blog:blog_details' post.slug %}">{{ post.title }}</a></h5>
                                     <p>{{ post.description|slice:'0:50' }}</p>
-                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <a href="{% url 'blog:blog_details' post.slug %}" class="blog__btn">{% trans 'READ MORE ' %}<span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
