--- a/src/templates/products/categories.html
+++ b/src/templates/products/categories.html
@@ -1,28 +1,13 @@
 {% extends 'base.html'%}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
 
   
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="{% static 'img/breadcrumb.jpg' %}">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="breadcrumb__text">
-                        <h2>Organi Shop</h2>
-                        <div class="breadcrumb__option">
-                            <a href="{% url 'products:home'%}">Home</a>
-
-                            <span>Shop</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
     <!-- Breadcrumb Section End -->
-
     <!-- Product Section Begin -->
     <section class="product spad">
         <div class="container">
@@ -30,20 +15,18 @@
                 <div class="col-lg-3 col-md-5">
                     <div class="sidebar">
                         <div class="sidebar__item">
-                            <h4>Department</h4>
+                            <h4>{% trans 'Department' %}</h4>
                             <ul>
-                                <li><a href="{% url 'products:categories' 'Meats'%}">Meats</a></li>
-								<li><a href="{% url 'products:categories' 'Vegetables'%}">Vegetables</a></li>
-								<li><a href="{% url 'products:categories' 'Fruits'%}">Fruits</a></li>
-								<li><a href="{% url 'products:categories' 'Juice'%}">Juice</a></li>
-								<li><a href="{% url 'products:categories' 'Fastfood'%}">Fastfood</a></li>
-								<li><a href="#">Oatmeal</a></li>
-								<li><a href="#">Butter & Eggs</a></li>
-                       
+                                <li><a href="{% url 'products:categories' 'Meats'%}">{% trans 'Meats' %}</a></li>
+								<li><a href="{% url 'products:categories' 'Vegetables'%}">{% trans 'Vegetables' %}</a></li>
+								<li><a href="{% url 'products:categories' 'Fruits'%}">{% trans 'Fruits' %}</a></li>
+								<li><a href="{% url 'products:categories' 'Juice'%}">{% trans 'Juice' %}</a></li>
+								<li><a href="{% url 'products:categories' 'Fastfood'%}">{% trans 'Fastfood' %}</a></li>
+								
                             </ul>
                         </div>
                         <div class="sidebar__item">
-                            <h4>Price</h4>
+                            <h4>{% trans 'Price' %}</h4>
                             <div class="price-range-wrap">
                                 <div class="price-range ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"
                                     data-min="3" data-max="540">
@@ -68,14 +51,14 @@
                            
                             <div class="col-lg-4 col-md-12 ">
                                 <div class="filter__found">
-                                    <h6><span>{{category|length}}</span> Products found</h6>
+                                    <h6><span>{{product|length}}</span>{% trans ' Products found' %}</h6>
                                 </div>
                             </div>
 
                         </div>
                     </div>
                     <div class="row">
-						{% for ctgy in category %}
+						{% for ctgy in product %}
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="{{ ctgy.image.url }}">
@@ -93,16 +76,16 @@
                         </div>
 						{% endfor %} 
                     </div>
-					{% if category.has_other_pages %}
+					{% if product.has_other_pages %}
                     <div class="product__pagination">
-						{% if category.has_previous %}
-					    <a href="?page={{category.previous_page_number}}"><i class="fa fa-long-arrow-left"></i></a>
+						{% if product.has_previous %}
+					    <a href="?page={{product.previous_page_number}}"><i class="fa fa-long-arrow-left"></i></a>
 						{% endif %}
-						{% for page in category.paginator.page_range %}
+						{% for page in product.paginator.page_range %}
                         <a href="?page={{page}}">{{page}}</a>
 						{% endfor %}
-						{% if category.has_next %}
-                        <a href="?page={{ category.next_page_number}}"><i class="fa fa-long-arrow-right"></i></a>
+						{% if product.has_next %}
+                        <a href="?page={{ product.next_page_number}}"><i class="fa fa-long-arrow-right"></i></a>
 						{% endif %}
                     </div>
 					{% endif %}
